<resources>
    <string name="app_name">streamer</string>
    <string name="next_tip">Next tip</string>
    <string name="last_tip">Enjoy listening to a music, podcast and everything you want with your friends</string>
    <string name="connecting_tip">To connect to a party:\n1. Click button \"Connect\"\n2. Scan your friend\'s QR\n3. Enjoy
    </string>
    <string name="streaming_tip">To stream music:\n1. Click button \"Stream\"\n 2. Grant permissions to the app\n3. Start streaming music\n4. Let your friends scan QR code of created party</string>
    <string name="first_tip">Neighbors complain about loud music? Want to listen to the same music together in different rooms or in transport without losing one of the headphones? There is a solution!</string>
    <string name="tips">Tips</string>
    <string name="connect">Connect</string>
    <string name="stream">Stream</string>
    <string name="start_streaming">Start streaming</string>
    <string name="stop_streaming">Stop streaming</string>
</resources>